--- a/RemainingPRNotifyer/package.json
+++ b/RemainingPRNotifyer/package.json
@@ -20,7 +20,10 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "probot": "^7.2.0"
+    "@slack/web-api": "^5.2.1",
+    "probot": "^7.2.0",
+    "probot-config": "^1.1.0",
+    "probot-scheduler": "^1.2.0"
   },
   "devDependencies": {
     "jest": "^24.0.0",
