--- a/RemainingPRNotifyer/package.json
+++ b/RemainingPRNotifyer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remaining-pr-notifyer",
+  "name": "weekly_works",
   "version": "1.0.0",
   "description": "A Probot app",
   "author": "ryoji.ban <r3b3a0n@gmail.com>",
